# redb_model

./: Cargo.toml  README.md
redb_model_derive/: Cargo.toml
redb_model_derive/src/: args.rs  impl_from.rs  impl_model.rs  impl_model_ext.rs  lib.rs  model.rs  table.rs  var.rs
redb_model_derive/src/args/: entry.rs  mod.rs  model.rs  ty.rs
redb_model_derive/src/var/: mod.rs
redb_model_trait/: Cargo.toml
redb_model_trait/src/: lib.rs
src/: lib.rs  traits.rs
tests/: attr.rs  macros.rs  types.rs
